--- a/src/components/SlotMachine.css
+++ b/src/components/SlotMachine.css
@@ -1,40 +1,46 @@
 @keyframes example {
-    to {
-        transform: rotate(360deg)
-      }
+    0% {
+        transform:translateY(-75%)
+    }      
+    100%{
+        transform: translateY(75%);
+    }
 }   
 
 .slot1 {
     position: absolute;
     width: 90px;
-    height: 180px;
+    height: 220px;
     float: left;
     padding: 10px;
     left: 550px;
-    top: 260px;
+    top: 190px;
     border: 4px solid black;
+    overflow: hidden;
 }
 
 .slot2 {
     position: absolute;
     width: 90px;
-    height: 180px;
+    height: 220px;
     float: left;
     padding: 10px;
     left: 650px;
-    top: 260px;
+    top: 190px;
     border: 4px solid black;
+    overflow: hidden;
 }
 
 .slot3 {
     position: absolute;
     width: 90px;
-    height: 180px;
+    height: 220px;
     float: left;
     padding: 10px;
     left: 750px;
-    top: 260px;
+    top: 190px;
     border: 4px solid black;
+    overflow: hidden;
 }
 
 .stopButton {
@@ -54,5 +60,27 @@
     top: 40px;
     animation-name: example;
     animation-iteration-count: infinite;
-    transform: translateZ(0);
+    animation-duration: 0s;
+    animation-timing-function: ease-in;
+    transform: translatey(-35%);
+}
+
+.icon2 {
+    position: absolute;
+    top: 40px;
+    animation-name: example;
+    animation-iteration-count: infinite;
+    animation-duration: 0s;
+    animation-timing-function: ease-in;
+    transform: translatey(-35%);
+}
+
+.icon3 {
+    position: absolute;
+    top: 40px;
+    animation-name: example;
+    animation-iteration-count: infinite;
+    animation-duration: 0s;
+    animation-timing-function: ease-in;
+    transform: translatey(-35%);
 }
